Fixed curious bug in Chrome, again with scrollbars

--- a/jsmm-applet/index.less
+++ b/jsmm-applet/index.less
@@ -105,9 +105,7 @@
 	.tab-output {
 		position: absolute;
 		left: 0px;
-		right: 0px;
 		top: 0px;
-		bottom: 0px;
 		width: auto;
 		height: auto;
 		overflow: auto;
